--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 
 /* regola di reset */
 
+body{
+    font-family: sans-serif;
+}
 .row{
     display: flex;
     /* prova*/
@@ -46,7 +49,13 @@
 /* inzio main */
 
 main .showcase .row {
-    gap: 33%;
+    gap: 15px;
+    justify-content: space-around;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-top: 40px;
     
 }
 
@@ -55,6 +64,18 @@ main .showcase .row {
 
 .sizing img{
 
-    max-width: 200px;
+    max-width: 300px;
 
 }
+
+.showcase .container-images .ob-3 .Price {
+
+    color: red;
+
+}
+.showcase .container-images .ob-3 .ex-Price{
+    text-decoration: line-through;
+} 
+
+
+/* fine parte main */
